# kvpexpand

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: continuous-integration.yml  publish.yml
src/kvpexpand/: _types.py  constants.py  key_generator.py  kvpexpand.py
src/kvpexpand/parsers/: delimited_parser.py  regex_parser.py  scalar_parser.py
tests/: test_kvpexpand.py
tests/unit/: test_key_generator.py
tests/unit/parsers/: test_delimited_parser.py  test_regex_parser.py  test_scalar_parser.py
