[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvpexpand"
authors = [
    {name = "Stephen Spence", email = "intentsspence.github@gmail.com"}
]
dynamic = ["version"]
description = "Python library to expand complex key-value-pairs into sub-key-value-pairs"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["key-value", "expansion", "parser", "configuration"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kvpexpand"]

[tool.setuptools.package-data]
"kvpexpand" = ["**/*"]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313", "py314"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/kvpexpand"]